# py-mineatar

./: LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
mineatar/: __init__.py  client.py  exceptions.py
tests/: test_mineatar_clients.py
