[project]
name = "py-mineatar"
version = "1.0.1"
description = "A Python wrapper for the Mineatar API."
authors = [
    { name = "Rezn1r", email = "rezn1r@proton.me" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mineatar", "minecraft", "api", "wrapper"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.13.2",
    "requests>=2.32.5"
]
[project.urls]
"Homepage" = "https://github.com/rzn1r/py-mineatar"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest-asyncio>=1.2.0",
    "pytest>=8.4.2"
]
